# project-template

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  compose.yaml  example.env  pyproject.toml  readme.md
.devcontainer/: devcontainer.json  post_create.sh
app_name/: main.py
