[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app_name"
version = "0.0.1"
description = ""
requires-python = ">=3.12,<3.13"
dependencies = [
  "ipykernel>=6.29.5",
  "matplotlib>=3.10.1",
  "pre-commit>=4.2.0",
  "ruff>=0.11.5",
]

[project.urls]
"Homepage" = "https://github.com/"

[tool.ruff]
indent-width = 2
line-length = 100
extend-include = ["*.ipynb"]
target-version = "py312"
respect-gitignore = true

[tool.ruff.isort]
lines-after-imports = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E402", "F401"]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
